[package]
name = "rreverse"
version = "0.1.0"
authors = ["Grant Miner <xxgsoftware@gmail.com>"]

[dependencies]
kdtree = "^0.4"
quick-csv = "^0.1.6"
rustc-serialize = "^0.3.22"
time = "^0.1.36"
queryst = "^1.0.1"
lazy_static = "^1.0.0"
futures = "0.1.20"
actix-web = "0.4"
hyper = "^0.11"
iron = "^0.6.0"
shio = "^0.2.0"

[[bin]]
name = "cmd"
path = "src/cmdline.rs"

[[bin]]
name = "iron"
path = "src/iron.rs"

[[bin]]
name = "hyper"
path = "src/hyper.rs"

[[bin]]
name = "shio"
path = "src/shio.rs"

[[bin]]
name = "actix"
path = "src/actix.rs"
