[workspace]
resolver = "2"
members = ["actix", "axum", "cmd", "reverse-geocoder", "warp"]

[workspace.dependencies]
# Internal crates
reverse_geocoder = { path = "reverse-geocoder" }

# External dependencies
actix-web = "4.11.0"
axum = "0.8.4"
bytes = "1.10.1"
criterion = "0.7.0"
csv = "1.3.1"
env_logger = "0.11.8"
kiddo = "5.2.2"
lazy_static = "1.5.0"
queryst = "3.0.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
warp = { version = "0.4.2", features = ["server"] }
