[package]
name = "rrgeo-actix"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.3.0"
reverse_geocoder = { path = "../reverse-geocoder" }
lazy_static = "1.4.0"
time = "0.3.17"
queryst = "3.0.0"
serde = "^1.0"
serde_derive = "^1.0"
env_logger = "0.10.0"

[dev-dependencies]
bytes = "^1.1.0"

[[bin]]
name = "rrgeo-actix"
path = "src/actix.rs"
