[package]
name = "rrgeo-actix"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"

[dependencies]
actix-web = { workspace = true }
reverse_geocoder = { workspace = true }
lazy_static = { workspace = true }
time = { workspace = true }
queryst = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }

[[bin]]
name = "rrgeo-actix"
path = "src/actix.rs"
