[package]
name = "rrgeo-axum"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"

[dependencies]
axum = "0.5.13"
lazy_static = "^1.4"
reverse_geocoder = { path = "../reverse-geocoder" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "rrgeo-axum"
