[package]
name = "rrgeo-axum"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"
default-run = "rrgeo-axum"

[dependencies]
axum = { workspace = true }
lazy_static = { workspace = true }
reverse_geocoder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "rrgeo-axum"
