[package]
name = "reverse-geocoder-hyper"
version = "0.1.0"
authors = ["Grant Miner <xxgsoftware@gmail.com>"]

[dependencies]
reverse_geocoder = { path = "../reverse-geocoder" }
lazy_static = "1.1.0"
time = "0.1.40"
queryst = "2.0.0"
hyper = "0.11"
futures = "0.1.24"

[[bin]]
name = "hyper"
path = "src/hyper.rs"
hyper = "0.12.11"
