[package]
name = "reverse-geocoder-iron"
version = "0.1.0"
authors = ["Grant Miner <xxgsoftware@gmail.com>"]

[dependencies]
reverse_geocoder = { path = "../reverse-geocoder" }
lazy_static = "1.1.0"
time = "0.1.40"
iron = "0.6.0"
queryst = "2.0.0"
serde_json = "1.0.32"

[[bin]]
name = "iron"
path = "src/iron.rs"
