[package]
name = "rrgeo-iron"
version = "0.1.0"
authors = ["Grant Miner <xxgsoftware@gmail.com>"]

[dependencies]
reverse_geocoder = { path = "../reverse-geocoder" }
lazy_static = "^1.4"
time = "^0.1"
iron = "^0.6"
queryst = "^2.0"
serde_json = "^1.0"

[[bin]]
name = "rrgeo-iron"
path = "src/iron.rs"
