[package]
name = "reverse_geocoder"
version = "4.1.1"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"
description = "Offline reverse geocoder library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gx0r/rrgeo"
categories = ["science"]
keywords = ["reverse", "geocoding", "geocoder", "location"]
include = ["**/*.rs", "cities.csv", "Cargo.toml"]

[dependencies]
kiddo = "^3.0.0"
csv = "^1.3.0"
#  time = "0.3.7"
serde = "^1.0.193"
serde_derive = "^1.0.193"

[patch.crates-io]
# https://github.com/sdd/kiddo/issues/154
generator = { git = "https://github.com/Xudong-Huang/generator-rs", rev = "e3f16af" }

[dev-dependencies]
criterion = "^0.5.1"
lazy_static = "^1.4"

[lib]
name = "reverse_geocoder"
path = "src/reverse_geocoder.rs"

[[bench]]
name = "benchmark"
harness = false
