[package]
name = "reverse_geocoder"
version = "4.1.1"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"
description = "Offline reverse geocoder library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gx0r/rrgeo"
categories = ["science"]
keywords = ["reverse", "geocoding", "geocoder", "location"]
include = ["**/*.rs", "cities.csv", "Cargo.toml"]

[dependencies]
kiddo = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
lazy_static = { workspace = true }

[lib]
name = "reverse_geocoder"
path = "src/reverse_geocoder.rs"

[[bench]]
name = "benchmark"
harness = false
