[package]
name = "reverse-geocoder-shio"
version = "0.1.0"
authors = ["Grant Miner <llambda@users.noreply.github.com>"]
edition = "2018"

[dependencies]
reverse_geocoder = { path = "../reverse-geocoder" }
shio = "0.3.0"
lazy_static = "1.1.0"
time = "0.1.40"
queryst = "2.0.0"

[[bin]]
name = "reverse-geocoder-shio"
path = "src/main.rs"