[package]
name = "rrgeo-shio"
version = "0.1.0"
authors = ["Grant Miner <llambda@users.noreply.github.com>"]
edition = "2018"

[dependencies]
reverse_geocoder = { path = "../reverse-geocoder" }
shio = "^0.3"
lazy_static = "^1.1"
time = "^0.1"
queryst = "^2.0"

[[bin]]
name = "rrgeo-shio"
path = "src/main.rs"