[package]
name = "rrgeo-warp"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"

[dependencies]
lazy_static = "^1.4"
reverse_geocoder = { path = "../reverse-geocoder" }
serde = "^1.0"
serde_derive = "^1.0"
time = "^0.3.7"
tokio = { version = "^1.23.1", features = ["full"] }
warp = "^0.3.2"

[dev-dependencies]
bytes = "^1.0.1"

[[bin]]
name = "rrgeo-warp"
path = "src/warp.rs"
