[package]
name = "rrgeo-warp"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"

[dependencies]
lazy_static = { workspace = true }
reverse_geocoder = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }

[[bin]]
name = "rrgeo-warp"
path = "src/warp.rs"
